--- a/docs/ReleaseNotes/1.0.4.0.md
+++ b/docs/ReleaseNotes/1.0.4.0.md
@@ -17,7 +17,7 @@ updated: 29 May 2023 -->
 [![SpaceY Corp (SYC)][SHD:mod]][CURSFG:url]  
 [![KSP version][SHD:ksp]][KSP:url] [![License][LIC:shd]][LIC:url] [![Pages][SHD:pgs]][pages]
 
-## Version 1.0.4.0-release - `<Спасибо evanisrael` edition
+## Version 1.0.4.0-release - `<Спасибо evanisrael>` edition
 
 * Released
   * 26 Jun 2023
